k8s/rabbitmq/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-headless
  namespace: climate-monitoring
  labels:
    app.kubernetes.io/part-of: climate-monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rabbitmq
    app.kubernetes.io/part-of: climate-monitoring
  ports:
  - name: amqp
    port: 5672
    targetPort: amqp
  - name: management
    port: 15672
    targetPort: management
  clusterIP: None
  publishNotReadyAddresses: true
